@@ -1,0 +1,26 @@
+/*
+ * Copyright 2016-2018 Philip Pavlick
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+ * use this file except in compliance with the License, excepting that
+ * Derivative Works are not required to carry prominent notices in changed
+ * files.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+// cheats.d:  Declarations for developer-mode booleans which affect the
+// behavior of the game for debugging and development testing
+
+static bool Degreelessness = false;
+static bool Infinite_weapon = false;
+static bool Noclip = false;
+static bool No_shadows = false;
+
+static bool Use_test_map = false;
